tool: open and run openrewrite plugin to maven pom.xml to upgrade Springboot version to 4.0.3