@@ -81,7 +81,7 @@ public class BsmProcessedJsonConverter
                 return KeyValue.pair(key, processedBsm);
             }
         } catch (Exception e) {
-            String errMsg = String.format("Exception converting ODE BSM to Processed BSM! Message: %s", e.getMessage());
+            String errMsg = "Exception converting ODE BSM to Processed BSM! Message: %s".formatted(e.getMessage());
             logger.error(errMsg, e);
             // KafkaStreams knows to remove null responses before allowing further steps from occurring
             RsuLogKey key = new RsuLogKey();
@@ -268,8 +268,7 @@ public class BsmProcessedJsonConverter
                 return null;
             }
         } catch (Exception e) {
-            String errMsg = String.format(
-                    "Failed to generateOffsetUTCTimestamp - BSMProcessedJsonConverter. Message: %s", e.getMessage());
+            String errMsg = "Failed to generateOffsetUTCTimestamp - BSMProcessedJsonConverter. Message: %s".formatted(e.getMessage());
             logger.error(errMsg, e);
             return null;
         }
