@@ -74,7 +74,7 @@ public class PsmProcessedJsonConverter
                 return KeyValue.pair(key, processedPsm);
             }
         } catch (Exception e) {
-            String errMsg = String.format("Exception converting ODE PSM to Processed PSM! Message: %s", e.getMessage());
+            String errMsg = "Exception converting ODE PSM to Processed PSM! Message: %s".formatted(e.getMessage());
             logger.error(errMsg, e);
             // KafkaStreams knows to remove null responses before allowing further steps from occurring
             RsuPsmIdKey key = new RsuPsmIdKey();
@@ -200,8 +200,7 @@ public class PsmProcessedJsonConverter
                 return null;
             }
         } catch (Exception e) {
-            String errMsg = String.format(
-                    "Failed to generateOffsetUTCTimestamp - PSMProcessedJsonConverter. Message: %s", e.getMessage());
+            String errMsg = "Failed to generateOffsetUTCTimestamp - PSMProcessedJsonConverter. Message: %s".formatted(e.getMessage());
             logger.error(errMsg, e);
             return null;
         }
